# CANDiagHybrid-Claude

./: 00-MASTER-PLAN.md  01-SYSTEM-ARCHITECTURE.md  03-TECHNICAL-DETAIL.md  05-CANOE-CANALYZER-SETUP.md  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.claude/agents/: builder.md  flexdiag-developer.md  flexdiag-reviewer.md  flexdiag-shipper.md  flexdiag-status.md  flexdiag-tester.md  gatekeeper.md
.claude/commands/: resume.md
bridge/: __init__.py  __main__.py  flexdiag_bridge.py
docs/: 00-MASTER-PLAN.md  01-SYSTEM-ARCHITECTURE.md  02-SYSTEM-REQUIREMENTS.md  03-TECHNICAL-DETAIL.md  04-RULES-AND-CONVENTIONS.md  05-CANOE-CANALYZER-SETUP.md  RUNBOOK.md  STATUS.md  TEST-CASES.md  USER-GUIDE.md
flutter_app/: .gitignore  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/codec/: dtc.dart  nrc.dart
flutter_app/lib/protocol/: codec.dart  seq.dart
flutter_app/lib/services/: diag_service.dart
flutter_app/lib/ui/: home_screen.dart  (+7 more)
flutter_app/linux/: CMakeLists.txt
mock_ecu/: __init__.py  __main__.py  server.py  uds.py
protocol/: __init__.py  dtc.py  nrc.py  wire.py
terminal/: __init__.py  __main__.py  protocol.py  repl.py  script.py  transport_tcp.py  transport_ws.py
tests/: cap_matrix.py  test_bridge_negatives.py  test_bridge_unit.py  test_flex_capabilities.py  test_flex_capabilities_b.py  test_mock_uds.py  test_protocol_dtc.py  test_protocol_nrc.py  test_protocol_wire.py  test_server_negatives.py  test_smoke.py  test_terminal_reconnect.py
tests/flex/: cap_clear_dtc.flex  cap_clear_dtc_b.flex  cap_readdtc.flex  cap_readdtc_b.flex  cap_security.flex  cap_security_b.flex  cap_session.flex  cap_session_b.flex  cap_tester_present.flex  cap_tester_present_b.flex
vector/capl/: flexdiag.vsysvar  flexdiag_core.can  flexdiag_sysvar.can  flexdiag_tcp.can
(+26 files in other folders)
